--- a/index.css
+++ b/index.css
@@ -1,58 +1,20 @@
 body{
 	padding: 0;
 	margin:0;
-	background-image: url('bizhi2.jpg');
+	background-color: #333333;
 	background-size: 100% 100%;
 }
-nav{
-	width: 100%;
-	height: 90px;
-	background: #000000;
-	color: #FFFFFF;
-	
-	line-height: 90px;
-}
-#logo{
-	float: left;
-	height: 100%;
-	font-size: 40px;
-	width: 180px;
-}
-.author{
-	float: right;
-	width: 170px;
-	color: #FFFFFF;
-}
-.thematic{
-	
-	text-align: center;
-	margin:0 180px;
-}
-.thematic a{
-	color: #FFFFFF;
-	font-size: 40px;
-	text-decoration: none;
-}
 
-.menu{
-	width: 100%;
-	font-size: 35px;
-	text-align: right;
-	font-weight: bolder;
-	margin-top: 60px;
-	margin-right: 120px;
-	color: #FFFFFE;
-}
-.menu div{
-	margin-right: 260px;
-}
-main li{
-	width: 300px;
-	margin-right:80px;
-	float: right;
-	font-size: 24px;
-}
-main li a{
-	text-decoration: none;
-	color: #FFFFEE;
-}
+
+nav{ width: 100%; height: 90px; background: #CCCCCC; color: #FFFFFF; line-height: 90px;}
+.logo,.author{height: 90px; width: 170px; color: #111111;}
+.logo{position: absolute; left: 10px; top: 5px; font-size: 40px;}
+.author{position: absolute; right:10px; top:5px; font-size: 20px;}
+.thematic{margin:0 170px; height: 90px; text-align: center;}
+.thematic a{color: #000000; font-size: 40px; text-decoration: none;}
+.menu{width: 100%; font-size: 35px; text-align: center; font-weight: bolder; margin-top: 60px; color: #FFFFFF;}
+.menu div{ margin-right: 260px; }
+main ul{display: inline-block; width: 100%}
+main li{ display:inline-block; width: 100%; text-align: center; margin-right:80px; float: right; font-size: 24px; list-style: circle;margin-bottom: 30px;}
+main li div{text-align: left; display: inline-block;}
+main li a{ text-decoration: none; color: #FFFFEE; }
